# RenderCore_ParaVer

./: CMakeLists.txt  README.md  main.cpp
GlobalInclude/: camera.h  hitable.h  hitableList.h  material.h  para_enable.h  random.h  scene.h  sphere.h  textures.h
GlobalInclude/Chapter/: Perlin.h  Volume.h  box.h  diffuse_light.h
GlobalInclude/basic/: vec3.h
Pic/: any.ppm
Source/: Lights.cpp  box.cpp  camera.cpp  diffuseLight.cpp  hitable.cpp  hitableList.cpp  material.cpp  para_enable.cpp  perlin.cpp  random.cpp  scene.cpp  sphere.cpp  textures.cpp  volume.cpp
